chore: update example

--- a/examples/webcomponent/cdn/index.html
+++ b/examples/webcomponent/cdn/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0" />
     <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&family=Inconsolata&family=Nunito+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-    <title>Basic Example - Web Components</title>
+    <title>CDN/No Bundler Example - Web Components</title>
 
     <!-- We prepare our form. This needs to run before the document loads so don't  defer it -->
     <script type="module">
@@ -45,7 +45,7 @@
     </script>
   </head>
   <body>
-    <h1>Basic Example - Web Components</h1>
+    <h1>CDN/No Bundler Example - Web Components</h1>
 
     <!-- template for validation message -->
     <template id="validation-message">
