refactor: use vanilla custom elements instead of lit

--- a/examples/web-component/cdn/index.html
+++ b/examples/web-component/cdn/index.html
@@ -49,8 +49,8 @@
 
     <!-- template for validation message -->
     <template id="validation-message">
-      <ul aria-live="polite" part="container">
-        <li part="item" />
+      <ul aria-live="polite">
+        <li data-part="item" />
       </ul>
     </template>
 
