--- a/examples/lit/custom-field/index.html
+++ b/examples/lit/custom-field/index.html
@@ -17,7 +17,7 @@
      }
 
      body {
-       margin: 0;
+       margin: 2rem;
        font-family: 'Nunito Sans', -apple-system, BlinkMacSystemFont, Segoe UI,
        Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
        font-size: 14px;
