--- a/examples/material-web/basic/index.html
+++ b/examples/material-web/basic/index.html
@@ -3,43 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
-    <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&family=Inconsolata&family=Nunito+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Basic Example - Material Web</title>
     <script type="module" src="/src/main.ts"></script>
   </head>
   <body>
-    <h1>Basic Example - Material Web</h1>
-
-    <!-- template for validation message -->
-    <template id="validation-message">
-      <ul aria-live="polite">
-        <li data-part="item" />
-      </ul>
-    </template>
+    <mwc-top-app-bar>
+      <div slot="title">Basic Example - Material Web</div>
+    </mwc-top-app-bar>
 
     <felte-form id="signin">
       <form>
-        <fieldset>
-          <legend>Sign In</legend>
-          <felte-field name="email" value="">
-            <mwc-textfield label="Email"></mwc-textfield>
-          </felte-field>
-          <felte-validation-message
-            for="email"
-            templateid="validation-message"
-          ></felte-validation-message>
-          <felte-field name="password" value="">
-            <mwc-textfield type="password" label="Password">
-            </mwc-textfield>
-          </felte-field>
-          <felte-validation-message
-            for="password"
-            templateid="validation-message"
-          ></felte-validation-message>
-        </fieldset>
-        <mwc-button raised label="Submit"></mwc-button>
-        <mwc-button raised label="Reset"></mwc-button>
+        <felte-field name="email" value="">
+          <mwc-textfield label="Email"></mwc-textfield>
+        </felte-field>
+        <felte-field name="password" value="">
+          <mwc-textfield type="password" label="Password">
+          </mwc-textfield>
+        </felte-field>
+        <div class="buttons">
+          <mwc-button outlined label="Reset"></mwc-button>
+          <mwc-button raised label="Submit"></mwc-button>
+        </div>
       </form>
     </felte-form>
     <section id="submitted"></section>
